variable name fixed

--- a/example/index.html
+++ b/example/index.html
@@ -9,7 +9,7 @@
       console.log('iframe load finished');
     }
 
-    IFRAME_HOST.mount({
+    iFramy.mount({
       containerId: "example",
       url: "./iframe.html",
       debug: true,
